--- a/relax-json-java/pom.xml
+++ b/relax-json-java/pom.xml
@@ -42,5 +42,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.requirementsascode</groupId>
+            <artifactId>moonwlker</artifactId>
+            <version>0.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
