--- a/relax-json-logic/pom.xml
+++ b/relax-json-logic/pom.xml
@@ -6,15 +6,22 @@
         <artifactId>relax-json</artifactId>
         <groupId>com.infilos</groupId>
         <version>2.13.3-0</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>relax-json-logic</artifactId>
+    <packaging>jar</packaging>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.jamsesso</groupId>
+            <artifactId>json-logic-java</artifactId>
+            <version>1.0.7</version>
+        </dependency>
+    </dependencies>
 </project>
