--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.infilos</groupId>
     <artifactId>relax-json</artifactId>
-    <version>2.15.0-3</version>
+    <version>2.15.0-4</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -311,9 +311,17 @@
                         <groupId>org.jreleaser</groupId>
                         <artifactId>jreleaser-maven-plugin</artifactId>
                         <version>0.8.0</version>
-                        <inherited>false</inherited>
                         <configuration>
-                            <update>true</update>
+                            <jreleaser>
+                                <release>
+                                    <github>
+                                        <overwrite>update</overwrite>
+                                    </github>
+                                </release>
+                                <auto-config-release>
+                                    <update>true</update>
+                                </auto-config-release>
+                            </jreleaser>
                         </configuration>
                     </plugin>
                 </plugins>
