--- a/relax-json-scala/pom.xml
+++ b/relax-json-scala/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>relax-json</artifactId>
         <groupId>com.infilos</groupId>
-        <version>2.15.0-6</version>
+        <version>2.15.0-7</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -32,4 +32,34 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>4.4.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>doc-jar</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
